update portfolio item alignment to fixed

--- a/client/public/css/layout.css
+++ b/client/public/css/layout.css
@@ -435,7 +435,7 @@ ul#nav li.current a {
 }
 
 #portfolio-wrapper {
-  display: flex;
+  display: Fixed;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
